tests/baselines/reference/letDeclarations-es5-1.errors.txt
tests/cases/compiler/letDeclarations-es5-1.ts(1,9): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5-1.ts(2,9): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5-1.ts(3,9): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5-1.ts(4,9): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5-1.ts(5,9): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5-1.ts(6,9): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.


==== tests/cases/compiler/letDeclarations-es5-1.ts (6 errors) ====
        let l1;
            ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
        let l2: number;
            ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
        let l3, l4, l5 :string, l6;    
            ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
        let l7 = false;
            ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
        let l8: number = 23;
            ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
        let l9 = 0, l10 :string = "", l11 = null;
            ~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.